public/stylesheets/depot.css
/* Global styles */

#store {
	padding-top: 5em;
	margin: 0 auto 0 auto;
}
#header {
	width: 505px;
	height: 160px; 
	padding: 1em 1em 0em 1em;
	margin: 0 auto 0 auto;
	z-index:1;
	text-indent: -9999px; /* para que el texto no se vea */
	background:url(../images/images_style/header.png)no-repeat;
}

body {
	margin: 0;	/* para ignorar los valores por defecto de otros navegadores */
	padding: 0; /* para ignorar los valores por defecto de otros navegadores */
	}

#content {
	margin: 0 auto 0 auto;
	width: 825px;
	height: 816px; 
	padding: 1em 1em auto 1em;
	background:url(../images/images_style/bg_body_b.png)no-repeat;
	z-index:-1;
}

#notice {
border: 2px solid red;
padding: 1em;
margin-bottom: 2em;
background-color: #f0f0f0 ;
font: bold smaller sans-serif;
}


#footer {
	float: bottom;
	width:60em;
	height:10em;
	padding: 1em 1em 1em 1em;
	margin: 1em 1em auto 1em;
	text-align:center;
	font-style:italic;
	font-size:small;
	clear: both;
}

#footer a {
 	overflow: hidden; /* bug de firefox */
}

#rails {
	background:url(../images/images_style/rails.png)no-repeat;
	display: block;
	width: 50px;
	height: 64px;
	float:center;
	margin: 1em 28em 1em 28em;
	text-indent: -9999px;

}
/* Styles for main page */


#menu1 {
	margin: 1em 1em 15em 1em;
	padding: 1em 1em 1em 1em;
	list-style:none;
	float: left;
	width: 10em; /* anchura del menu */
}

#menu1 a {
	padding-left: 0em;
	padding-top: 0em;
}

#menu1 p {
	font: georgia bold;
	margin: 1em auto 0.5em auto;
	color: #442222
	padding: 0em;
	font-size: 125%;
	color: #700033 ;
	border: 1px dotted #442222 ;
}

#menu2 a {
	display: block;
	width: 85px;
	height: 23px;
	text-indent: -9999px;
	overflow: hidden; /* bug de firefox */
}

#m-home a {
	background:url(../images/images_style/home_d.png) no-repeat;
}

#m-checkout a {
	background:url(../images/images_style/checkout_d.png) no-repeat;
}

#m-contact a {
	background:url(../images/images_style/contact_d.png) no-repeat;
}

#menu2 li.active a, #menu1 li a:hover { 
	background-position:0 -23px !important; /* para cambiar el aspecto de la pestana que hay debajo del puntero*/
}

#menu3 {
	list-style:none;
	float: left;
	width: 7em; /* anchura del menu */
	margin: 1em 2em 1em 1em;
	padding: 1em 1em 1em 1em;
	font: georgia bold;

}

a {
	color: #442222 !important;
}

active a, a:hover { 
	color: #cc5533 !important;
	font-size: 105% !important;
}

#main {
	margin: 0em 1em auto 14em;
	padding: 1em 1em 1em 1em;
/*	padding: 30px 130px; */
	text-align:justify;
}

h1 {
	font: 150% georgia;
	color: #700033 ;
	border-bottom: 1px dotted #442222 ;
	margin: 0.5em 1em 1em 0em;
}

#main a{
	padding-left: 0em;
}


th {
font: 145% Georgia;
color: #A10048 ;
}

td {
font: 93% Georgia;
color: #442222 ;

}


#t_users {
	border-collapse:collapse;
	padding-left:2em;

}
#t_users td {
	font: 93% Georgia;
	height:35px;
	padding-top:0em;
	padding-bottom:0em;
	padding-left:2em;
	padding-right:2em;

	border:1px dotted #442222;

}

#search {
	margin: 1em auto auto 30em;
}

/* Styles for products/index */

#product-list {
	padding: 1em 1em 1em 1em;
}

#product-list .list-title {
color: #A10048 ;
font-weight: bold;
font-size: larger;
}
#product-list .list-image {
width: 60px;
height: 70px;
}
#product-list .list-actions {
font-size: small;
text-align: right;
padding-left: 1em;
padding-right: 1em;
}

#new_product {
	padding: 1em 1em 1em 3em;
}

#list_orders {
	padding: 1em 1em 1em 1em;
	border-collapse:collapse;

}


#list_orders td {
	font: 93% Georgia;
	height:50px;
	padding-top:0em;
	padding-bottom:0em;
	padding-left:0.5em;
	padding-right:0.5em;

	border:1px dotted #442222;

}

#show_orders {
	padding: 1em 1em 1em 1em;
}

#t_orders {
	border-collapse:collapse;
	width: 32.5em;
}
#t_orders td {
	font: 93% Georgia;
	height:50px;
	padding-top:0em;
	padding-bottom:0em;
	padding-left:2em;
	padding-right:2em;

	border:1px dotted #442222;

}

/* An entry in the store catalog */


#store .entry {
	border-bottom: 1px dotted #773311 ;
	margin: 1em 1em 1em 1em;
}
#store .title {
font-size: 120%;
font-family: sans-serif;
}
#store .entry img {
	width: 75px;
	float: left;
	padding: 1em 1em 1em 1em;
	margin-bottom: 0em;
}
#store .entry h3 {
margin-bottom: 2px;
color: #227 ;
}
#store .entry p {
margin-top: 0px;
margin-bottom: 0.8em;
padding: 0.5em 0.5em 0.5em 6.5em;

}
#store .entry .price-line {
}
#store .entry .add-to-cart {
position: relative;
}
#store .entry .price {
color: #442222;
font-weight: bold;
margin-right: 2em;

}
#store .entry form, #store .entry form div {
display: inline;
}




/* Styles for the cart in the main page and the sidebar */
.cart-title {
	font: 120% bold;
	margin-top: 1em;
}
.item-price, .total-line {
text-align: right;
}
.total-line .total-cell {
font-weight: bold;
border-top: 1px solid #773311 ;
}


/* Styles for the cart in the sidebar */
#cart, #cart table {
color: #442222 ;
padding-left: 1em;
font-size: 90%;
}
#cart table {
border-top: 1px dotted #773311 ;
border-bottom: 1px dotted #773311 ;
margin-bottom: 10px;
}
/* Styles for order form */
.depot-form {
	padding: 1em 3em 1em 4.75em;

}
.depot-form fieldset {
background: #efe;
}
.depot-form legend {
color: #dfd ;
background: #442222 ;
font-family: sans-serif;
padding: 0.2em 1em;
}
.depot-form label {
width: 5em;
float: left;
text-align: right;
margin-right: 0.5em;
display: block;
}
.depot-form .submit {
margin-left: 5.5em;
}



/* The error box */
.fieldWithErrors {
padding: 2px;
background-color: red;
display: table;
}
#errorExplanation {
width: 400px;
border: 2px solid red;
padding: 7px;
padding-bottom: 12px;
margin-bottom: 20px;
background-color: #f0f0f0 ;
}
#errorExplanation h2 {
text-align: left;
font-weight: bold;
padding: 5px 5px 5px 15px;
font-size: 12px;
margin: -7px;
background-color: #c00 ;
color: #fff ;
}
#errorExplanation p {
color: #333 ;
margin-bottom: 0;
padding: 5px;
}
#errorExplanation ul li {
font-size: 12px;
list-style: square;
}
Report

